so i am done in trae

--- a/src/pages/portfolio_template.html
+++ b/src/pages/portfolio_template.html
@@ -85,9 +85,9 @@
                 <div class="contact-info">
                     <p>Email: <a href="mailto:{{contact.email}}">{{contact.email}}</a></p>
                     {{#if contact.phone}}<p>Phone: {{contact.phone}}</p>{{/if}}
-                    {{#if contact.linkedin}}<p>LinkedIn: <a href="{{contact.linkedin}}" target="_blank">{{contact.linkedin}}</a></p>{{/if}}
-                    {{#if contact.github}}<p>GitHub: <a href="{{contact.github}}" target="_blank">{{contact.github}}</a></p>{{/if}}
-                    {{#if contact.twitter}}<p>Twitter: <a href="{{contact.twitter}}" target="_blank">{{contact.twitter}}</a></p>{{/if}}
+                    {{#if contact.linkedin}}<p>LinkedIn: <a href="{{contact.linkedin}}" target="_blank" rel="noopener noreferrer">{{contact.linkedin}}</a></p>{{/if}}
+                    {{#if contact.github}}<p>GitHub: <a href="{{contact.github}}" target="_blank" rel="noopener noreferrer">{{contact.github}}</a></p>{{/if}}
+                    {{#if contact.twitter}}<p>Twitter: <a href="{{contact.twitter}}" target="_blank" rel="noopener noreferrer">{{contact.twitter}}</a></p>{{/if}}
                 </div>
             </div>
         </section>
